Continue to develop API endpoints. Next, testing endpoints in swagger
